--- a/index.html
+++ b/index.html
@@ -174,12 +174,19 @@
     <div class="section group">
         <div class="col span_2_of_6">
     <img  src="images/wpsp_1.gif">
-            <h2>Text goes here</h2></div>
+            <h2>Text goes here</h2><div class="spacer2"></div>
+         <img  src="images/wpsp_1.gif">
+            <h2>Text goes here</h2>
+        
+        </div>
 <div class="col span_2_of_6">
     <img  src="images/wpsp_2.gif">
+    <h2>Text goes here</h2><div class="spacer2"></div><img  src="images/wpsp_2.gif">
     <h2>Text goes here</h2></div>
+        
         <div class="col span_2_of_6">
     <img  src="images/wpsp_3.jpg">
+    <h2>Text goes here</h2><div class="spacer2"></div><img  src="images/wpsp_3.jpg">
     <h2>Text goes here</h2></div>
     </div>  
 
