--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ a number of major art and academic institutions such as MoMA, PS1, New Museum, R
        <img class="wz" src="images/wzp_1.gif">
 <!--    <h1>Text goes here</h1>   --><div class="spacer2"></div>
            <img src="images/wzp_1.jpg">
-<!--    <h1>Text goes here</h1>   --><div class="spacer2"></div>
+    <h1>Text goes here</h1>   <div class="spacer2"></div>
     <div class="section group">
         <div class="col span_3_of_6">
          <img src="images/wzp_2.jpg"><h1>Text goes here</h1>
