--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ D&D Award for Publication Design 2015</p>
     </div> 
 
  
-  
+   <img  class="webs" src="images/hdm/hdm_web_1.gif">
 
     
  
