--- a/index.html
+++ b/index.html
@@ -203,16 +203,16 @@
             <p>Converted from a tiny storefront storage space in the heart of Chinatown, W/—— Project Space was a small gallery space started in 2008.</p>
             <p>
 
-                Playing with limitations of space, time and resources, With Projects began as a collaborative experiment with like-minded creatives from the fine arts, design, multimedia, technology and architecture to play with these parameters to create dynamic and interactive temporary installations in Chinatown that could evolve.</p>
+                Playing with limitations of space, time and resources, With Projects began as a collaborative experiment with like-minded creatives from the fine arts, design, multimedia, technology and architecture to play with these parameters to create dynamic and interactive temporary installations in Chinatown that would constantly evolve during their exhibition.</p>
             <p>
 
                 Given one month to exhibit work, contributors were also encouraged to invite other participants to disrupt their pieces in ways that could add onto their work over time. </p>
             <p>
 
-                Collaborators included Keegan McHargue, Amy Yao, musicians Glasser, Arp, Hunter Hunt Hendrix/Liturgy, Rafael Rozendaal, Yemenwed, Peter Sutherland, Confetti System, 2x4, and many more.</p>
+                Collaborators included Keegan McHargue, Amy Yao, Rafael Rozendaal, Yemenwed, Peter Sutherland, Confetti System, 2x4, Stuart Bailey with Rob Giampetro, Kingsboro Press, musicians Glasser, Arp, Hunter Hunt Hendrix/Liturgy, and many more.</p>
             <p>
 
-                The body of work curated and generated during this time was awarded the American Academy in Rome Prize in 2012.
+                The body of work curated and generated during this time was awarded the American Academy Rome Prize in 2012.
             </p>
         </div>
     </div>
