--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 2020</p>
         </div>
     </div>
-<div class="spacer"></div>
+<div class="spacer0"></div>
     <div class="section group">
         <div class="col span_2_of_6">
             <p>About</p>
