--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
 </head>
 
 <body>
+    <div class="headers"></div>
     <div class="section group">
         <div class="col span_2_of_6">
-            <p><br>With Projects, Inc.</p>
+            <p>With Projects, Inc.</p>
         </div>
         <div class="col span_4_of_6">
-            <p><br>Creative Portfolio<br>
+            <p>Creative Portfolio<br>
                 2020</p>
         </div>
     </div>
