--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Creative Portfolio</title>
     <meta charset="UTF-8">
     <link id="stylesheet" rel="stylesheet" type="text/css" href="css/style.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="description" content="With Projects, Inc. Creative Portfolio, 2020">
     
      <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
