--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
     
 
 <div class="spacer"></div>
-    
+    <img src="images/igposts.jpg">
+    <div class="spacer2"></div>
     <div class="dtext">
     <div class="section group">
         <div class="col span_2_of_6">
