--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
            <p>White Zinfandel<br>2011–</p>
         </div>
     </div>
- <div class="spacer2"></div>
+ <div class="spacer"></div>
  <div class="section group">
         <div class="col span_2_of_6">
             <p>Re-inventing Food Culture</p>
