--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Creative Portfolio</title>
+    <title>With Projects, Inc.</title>
     <meta charset="UTF-8">
     <link id="stylesheet" rel="stylesheet" type="text/css" href="css/style.css">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -36,17 +36,12 @@
             <p>With Projects, Inc.</p>
         </div>
         <div class="col span_4_of_6">
-            <p>Creative Portfolio<br>
-                2020</p>
         </div>
         </div></div>
     <div class="mtext">
     <div class="section group">
         <div class="col span_6_of_6">
             <p>With Projects, Inc.</p>
-   
-            <p>Creative Portfolio<br>
-                2020</p>
         </div>
     </div></div>
     
