--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
         </div>
     </div>
     <div class="spacer2"></div>
-    <img src="img/gm/_GM_1.jpg">
+    <img src="img/gm/gma.jpg">
 
     <div class="spacer2"></div>
     <div class="video">
