--- a/index.html
+++ b/index.html
@@ -1146,10 +1146,10 @@ rebranded itself, it has implemented new creative strategy and design sprints fo
         <div class="dtext">
             <div class="section group">
                 <div class="col span_2_of_6">
-                    <p>Thank You</p>
+                    <p><br><br><br><br><br><br><br><br>Thank You</p>
                 </div>
                 <div class="col span_4_of_6">
-                    <p>jiminie@withprojects.org<br>@withprojects</p>
+                    <p><br><br><br><br><br><br><br><br>jiminie@withprojects.org<br>@withprojects</p>
                 </div>
             </div>
         </div>
