--- a/index.html
+++ b/index.html
@@ -1276,7 +1276,7 @@ rebranded itself, it has implemented new creative strategy and design sprints fo
         
         <div class="dtext">
               <div class="section group">
-            <div class="col span_2_of_6"><p class="abs">Dazed Korea x Kyuk Oh </p></div>
+            <div class="col span_2_of_6"><p class="abs">Dazed Korea x Hyuk Oh </p></div>
             <div class="col span_4_of_6">
                 <p class="abs">
                 Special Edition book with Converse and Hyuk Oh.</p>
